# foobot

./: Cargo.toml  Dockerfile
src/: action_handler.rs  bot.rs  command_handler.rs  config.rs  db.rs  jobs.rs  main.rs  pubsub.rs  twitch_api.rs  web.rs
src/action_handler/: spotify.rs  sys.rs  translate.rs  weather.rs
src/pubsub/: channel_points.rs
templates/: commands-page.hbs
