[package]
name = "foobot"
version = "0.1.0"
authors = ["ilya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"
native-tls = { version = "", features = ["vendored"] }
anyhow = ""
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = ""
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.13", features = ["tls"] }
futures-util = ""
psutil = "3.2"