[package]
name = "foobot"
version = "0.1.0"
authors = ["ilya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = { git = "https://github.com/robotty/twitch-irc-rs.git", default-features = false, features = ["transport-tcp-rustls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"
anyhow = ""
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = ""
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.13", features = ["tls"] }
futures-util = ""
psutil = "3.2"
log = ""
env_logger = ""
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["handlebars"] }
